--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "The DataDisplay class is a dynamic PHP data table renderer built with Sweet Alert and Bootstrap. It supports adding, editing, deleting, searching, joining tables, and pagination — all from a fluent interface.",
     "type": "library",
     "license": "MIT",
+    "version": "1.0.0",
     "autoload": {
         "psr-4": {
             "Revaycolizer\\DataDisplay\\": "src/",
