--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "The DataDisplay class is a dynamic PHP data table renderer built with Sweet Alert and Bootstrap. It supports adding, editing, deleting, searching, joining tables, and pagination — all from a fluent interface.",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.0",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Revaycolizer\\DataDisplay\\": "src/",
