--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,15 @@
     "name": "revaycolizer/data-display",
     "description": "The DataDisplay class is a dynamic PHP data table renderer built with Sweet Alert and Bootstrap. It supports adding, editing, deleting, searching, joining tables, and pagination — all from a fluent interface.",
     "type": "library",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Revaycolizer\\DataDisplay\\": "src/",
-            "App\\Types\\": "types/"
+            "App\\Types\\": "types/",
+            "App\\Helpers\\": "helpers-classes/"
         }
     },
     "authors": [
