--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "revaycolizer/data-display",
     "description": "The DataDisplay class is a dynamic PHP data table renderer built with Sweet Alert and Bootstrap. It supports adding, editing, deleting, searching, joining tables, and pagination — all from a fluent interface.",
     "type": "library",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -19,5 +19,7 @@
             "email": "albinuslucas@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpoffice/phpspreadsheet": "^4.2"
+    }
 }
